Fixed unorganized elements on mobile Chrome for better layout and user experience.

--- a/static/css/style-home.css
+++ b/static/css/style-home.css
@@ -299,4 +299,8 @@ body {
           border:1px solid rgb(255, 255, 255);
           box-shadow: 0 2px 5px 0 rgb(255, 255, 255);
         }
+
+        footer {
+          bottom: -131px;
+        }
     }
